--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="micromoira">
+<html lang="en" ng-app="micromoira" ng-strict-di>
 <head>
     <title>M I C R O M O I R A</title>
 
@@ -13,24 +13,11 @@
             <a class="brand-logo" href="#">M I C R O M O I R A</a>
         </div>
     </nav>
-    <div class="container">
-        <div class="section">
-            <div class="row">
-                <form class="col s12">
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <label for="">Story</label>
-                            <textarea class="materialize-textarea"></textarea>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="../node_modules/materialize-css/bin/materialize.js"></script>
+    <div class="container" ng-view></div>
     <script src="../node_modules/angular/angular.min.js"></script>
     <script src="../node_modules/angular-route/angular-route.min.js"></script>
+    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="../node_modules/materialize-css/bin/materialize.js"></script>
 
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
