Move character counter styles to CSS file

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <link rel="stylesheet" href="../node_modules/materialize-css/bin/materialize.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <nav class="grey darken-4" role="navigation">
