--- a/src/index.prod.html
+++ b/src/index.prod.html
@@ -12,9 +12,41 @@
     <nav class="grey darken-4" role="navigation">
         <div class="nav-wrapper container">
             <a class="brand-logo" href="#">M I C R O M O I R A</a>
+            <ul class="right">
+                <li><a href="https://github.com/maxdeviant/micromoira">GitHub</a></li>
+            </ul>
         </div>
     </nav>
-    <div class="container" ng-view></div>
+    <main class="container" ng-view></main>
+    <footer class="page-footer grey lighten-4">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="grey-text text-darken-4">About</h5>
+                    <p class="grey-text text-darken-4">
+                        Inspired by <a class="grey-text text-darken-4" href="http://undream.net/">Murat Pak</a>.
+                    </p>
+                    <p class="grey-text text-darken-4">
+                        Architected by <a class="grey-text text-darken-4" href="https://elliott.codes/">Marshall Bowers</a>.
+                    </p>
+                </div>
+                <div class="col l4 offset-l2 s12">
+                    <h5 class="grey-text text-darken-4">Twitter</h5>
+                    <ul>
+                        <li><a class="grey-text text-darken-4" href="https://twitter.com/micromoira">@micromoira</a></li>
+                        <li><a class="grey-text text-darken-4" href="https://twitter.com/muratpak">@muratpak</a></li>
+                        <li><a class="grey-text text-darken-4" href="https://twitter.com/maxdeviant">@maxdeviant</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                <span class="grey-text text-darken-4">&copy; 2015 Marshall Bowers</span>
+            </div>
+        </div>
+    </footer>
+
     <script src="js/vendor.min.js"></script>
     <script src="js/micromoira.min.js"></script>
 </body>
